# texlab

./: .gitignore
crates/formatter/: Cargo.toml  README.md
crates/formatter/src/: formattable.rs  lib.rs  lstgraph.rs  math.rs  refactored-formattable.rs  tests.rs  tex.rs
crates/parser/src/: latex.rs
crates/parser/src/latex/: lexer.rs  tests.rs
crates/parser/src/latex/lexer/: commands.rs  types.rs
crates/symbols/src/document/: tests.rs
crates/symbols/src/workspace/: tests.rs
crates/syntax/src/latex/: kind.rs
crates/texlab/: Cargo.toml
crates/texlab/src/features/: formatting.rs
crates/texlab/src/features/formatting/: formatter.rs  tests.rs  todo.md
crates/trainer/: Cargo.toml
crates/trainer/src/: main.rs
crates/trainer/testinput/: graph.dot  test.tex
crates/trainer/texExamples/: ex1.tex  ex10.tex  ex11.tex  ex12.tex  ex13.tex  ex14.tex  ex2.tex  ex3.tex  ex4.bk  ex5.bk  ex6.tex  ex7.tex  ex8.tex  ex9.tex  output.tex
crates/trainer/texFiles/: gpt1.md  gpt2.md  gpt3.md  gpt4.md  gpt5.md  mynotes.sty  outline.bib
crates/trainer/texFiles/hw1/: main.aux  main.fdb_latexmk  main.fls  main.tex  myNotes.sty
crates/trainer/texFiles/wavepacket/: main.aux  main.bbl  main.bib  main.fdb_latexmk  main.fls  main.out  main.tex
crates/trainer/texFiles/wavepacket/1d-nonlinear/: H01.eps  H05.eps  H1.eps  H5.eps  errorplot1d.eps  qp01.eps  qp05.eps  qp1.eps  qp5.eps
crates/trainer/texFiles/wavepacket/2dexample/: H01.eps  H05.eps  H1.eps  H3.eps  H5.eps  L01.eps  L05.eps  L1.eps  L5.eps  Q01.eps  Q05.eps  Q1.eps  Q5.eps  errorplot.eps
