[package]
name = "formatter"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
log.workspace = true
petgraph = "0.6.5"
rowan.workspace = true
syntax = { path = "../syntax" }

[dev-dependencies]
expect-test.workspace = true
test-utils = { path = "../test-utils" }

[lib]
doctest = false