[package]
name = "trainer"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
rowan.workspace = true
petgraph = "0.6.5"
base-db = { path = "../base-db" }
syntax = { path = "../syntax" }
parser = { path = "../parser" }
smartcore = "0.4.0"

[dependencies.xxhash-rust]
version = "0.8.14"
features = ["xxh3", "const_xxh3"]

[dev-dependencies]
expect-test.workspace = true
test-utils = { path = "../test-utils" }
